# smartHOLD

./: .env  .gitignore  Procfile  README.md  bot.py  config.py  db.py  requirements.txt  solana_utils.py  wallet_connect.py  web_server.py
smart-contract/: Cargo.toml  README.md
smart-contract/.cargo/: config.toml
smart-contract/src/: error.rs  lib.rs
templates/: claim.html  index.html
