[package]
name = "sdcb-token"
version = "0.1.0"
edition = "2021"
description = "Summit Digital Crypto Bank Token Smart Contract"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
thiserror = "1.0.50"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1.14.1", features = ["full"] }

[profile.release]
lto = false 